refactor: introduce ImprintStoreDBEnum for database